fixed scroll on mobile

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
   /* outline: 1px solid red; */
   scrollbar-color: rgb(255, 255, 255) white;
   scrollbar-width: thin;
-  overflow: auto;
+  /* overflow: auto; */
   text-align: center;
 }
 
